# EVM

./: CRC.v  DES.cpp  DES.hpp  README.md  bit_level_mixing_encode.v  brute_force.cpp  encrypter.v  import_test.cpp  key_hashing_algo  key_hashing_algo.cpp  shift_encoding_tb.v  test.cpp  xor_encoding.v  xor_encoding_tb.v
BRAM_PUF/: BRAM_PUF.xpr
DES/: DES.cpp  DES.hpp  DES_bruteforce.cpp  des_test  run_test.sh  test.cpp
Diffi-Hellman/: Diffi-Hellman.cpp  diff_test  key_exchange_algo_test.cpp  run.sh
Verilog_codes/design/: key_creation.v  shift_encoding.v
Verilog_codes/evm_v2_design_files/: CRC_verifier.v  Decrypter.v  Encrypter.v  bit_level_mixing_decode.v  encrypter_reg.v  inverse_initial_permutation.v  inverse_permute_map.v  inverse_shift_encoding.v  mux.v  permute_map.v
Verilog_codes/evm_v2_sim_files/: Decrypter_tb.v  Encrypter_tb.v  encrypter_reg_tb.v  initial_permutation_tb.v  inverse_permute_map_tb.v  inverse_shift_encoding_tb.v  permute_map_tb.v
Verilog_codes/test_bench/: CRC_tb.v  bit_level_mixing_encode_tb.v  encrypter_tb.v  key_creation_tb.v  my_sha_tb.v
brute_force_v2/: brute_force.py  run  run.sh
brute_force_v2/include/: main.hpp
brute_force_v2/src/: main.cpp  (+1 more)
custom encrypter/: brute_force.cpp  cude_boosted  cude_boosted.cu  import_test  import_test.cpp  key_hashing_algo.cpp  run  run.sh
custom_encrypter_v2/: CMakeLists.txt  main.cpp  main.hpp  run  run.sh  test.cpp
custom_encrypter_v2/src/: main.cpp  test.cpp
designs/: inverse_permute_map.v  inverse_shift_encoding.v
simu/: CRC_verfier_tb.v  Encrypter_tb.v  bit_level_mixing_decode_tb.v
(+72 files in other folders)
